[Shubham] Editing skills img for phone size

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="col-md-6 col-sm-12 ">
           <img
             height="auto"
-            width="400px"
+            width="300px"
             src="./img/mee.jpeg"
             alt="Profile Image"
           />
@@ -172,7 +172,7 @@
         <h2 class="mb-5">TECHNICAL SKILLS</h2>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/html-5.png" />
@@ -180,7 +180,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">HTML 5</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/css.png" />
@@ -188,7 +188,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">CSS</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/javascript.png" />
@@ -196,7 +196,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">JavaScript</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/React.png" />
@@ -204,7 +204,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">React JS</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/redux.png" />
@@ -212,7 +212,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Redux</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/mong.png" />
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="row" style="margin-top: 30px;">
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/express (2).png" />
@@ -231,7 +231,7 @@
           </a>
         </div>
         
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/bug.png" />
@@ -239,7 +239,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Unit Testing</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/cpp.png" />
@@ -247,7 +247,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">C++</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/Java.png" />
@@ -255,7 +255,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Java</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/python.png" />
@@ -263,7 +263,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Python</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/node-512.png" />
@@ -274,7 +274,7 @@
       </div>
       <div class="row" style="margin-top: 30px;">
         
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/npm.png" />
@@ -282,7 +282,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">npm</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/styling.png" />
@@ -290,7 +290,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">UI styling</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/graphql.png" />
@@ -303,7 +303,7 @@
         <h2 class="mb-5" style="margin-top: 100px;">PROJECT MANAGEMENT SKILLS</h2>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/confluence.png" />
@@ -311,7 +311,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Confluence</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/jenkins.png" />
@@ -319,7 +319,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Jenkins</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/JIRA.png" />
@@ -327,7 +327,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">JIRA</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/Git.png" />
@@ -335,7 +335,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Git</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/VS.png" />
@@ -343,7 +343,7 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Virtual Studio</div>
           </a>
         </div>
-        <div class="col-lg-2 col-sm-12">
+        <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/Agile.png" />
