[Shubham] Adding Music app

--- a/index.html
+++ b/index.html
@@ -450,27 +450,28 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/project.jpg" />
+                  <img class="img-fluid" src="./img/projects/music.png" />
                 </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">MUSIC APP</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  Music application to be more concentrated for work. The library is loaded with 14 songs which the user can switch at any moment.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+              <div>
+                <a>
+                  <i class="fab fa-github" style="font-size: 2rem;"></i>
+                  <i class="fab fa-js" style="font-size: 2rem;"></i>
+                  <i class="fab fa-html5" style="font-size: 2rem;"></i>
+                  <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                </a>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://nostalgic-galileo-141565.netlify.app/">
                 See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
-                Source Code
               </a>
             </div>
           </div>
