[Shubham] Editing the css of like button

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ height: 100%;">
         <div class="heart-btn">
           <div class="content">
             <span class="heart"></span>
-            <span class="text">Like</span>
+            <span class="text">Liked it</span>
             <span class="numb"></span>
           </div>
         </div>
