[Shubham] Adding Desktop and Mobile icons for Project header

--- a/index.html
+++ b/index.html
@@ -411,7 +411,10 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MET-REPORT</h3>
+              <h3 class="project-wrapper__text-title">MET-REPORT - 
+                <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> 
+                <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
+              </h3>
               <div>
                 <p class="mb-4">
                   Metrological Report or 'MET-REPORT' is an application that will help you to get the weather conditions of a partiular place in the world.
@@ -456,7 +459,7 @@
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MUSIC APP</h3>
+              <h3 class="project-wrapper__text-title">MUSIC APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
               <div>
                 <p class="mb-4">
                   Music application to be more concentrated for work. The library is loaded with 14 songs which the user can switch at any moment.
