[Shubham] Editing the form

--- a/index.html
+++ b/index.html
@@ -516,7 +516,8 @@ height: 100%;">
 </div>
 </div> -->
 
-<form action="MAILTO:shubhamsinha8752@gmail.com">
+<form action="https://getform.io/f/fe728aaa-70cb-4ae5-a2ab-d0dda1dba16b" method="POST">
+        
 <section id='contact'>
   <div class="contain" style="margin-top: 50px;">
 		<div class="contact-box">
@@ -530,7 +531,7 @@ height: 100%;">
         <div class="heart-btn">
           <div class="content">
             <span class="heart"></span>
-            <span class="text">Liked it</span>
+            <span class="text">Liked it </span>
             <span class="numb"></span>
           </div>
         </div>
@@ -608,6 +609,20 @@ height: 100%;">
       });
     });
   </script>
+
+  <!-- Start of Tawk.to Script-->
+<!-- <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/6016964ba9a34e36b9724313/1etc3m722';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script> -->
+  <!--End of Tawk.to Script -->
 
 </body>
 
