[Shubham] Adding insta link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <ul class="social">
       <li><a href="#"><img src="facebook.png"></a></li>
       <li><a href="#"><img src="twitter.png"></a></li>
-      <li><a href="#"><img src="instagram.png"></a></li>
+      <li><a href="https://www.instagram.com/am_shubh_am/"><img src="instagram.png"></a></li>
     </ul>
   </section>
   <div class="menu">
