[Shubham] Adding the dummy row for projects

--- a/index.html
+++ b/index.html
@@ -479,6 +479,47 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">MET-REPORT - 
+                <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> 
+                <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
+              </h3>
+              <div>
+                <p class="mb-4">
+                  Metrological Report or 'MET-REPORT' is an application that will help you to get the weather conditions of a partiular place in the world.
+                </p>
+              </div>
+              <div>
+              <div>
+                <a>
+                  <i class="fab fa-github" style="font-size: 2rem;"></i>
+                  <i class="fab fa-react" style="font-size: 2rem;"></i>
+                  <i class="fab fa-js" style="font-size: 2rem;"></i>
+                  <i class="fab fa-html5" style="font-size: 2rem;"></i>
+                  <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                </a>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://romantic-tereshkova-3883dc.netlify.app/">
+                See Live
+              </a>
+            </div>
+            <!-- <div>
+              <a target="_blank" class="cta-btn text-color-main" href="#!">
+                Source Code
+              </a>
+            </div> -->
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <a class="portfolio-item" href="#!">
+                <div data-tilt class="thumbnail rounded">
+                  <img class="img-fluid" src="./img/projects/metreport.png" />
+                </div>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
