[Shubham] Adding space and editing the heading

--- a/index.html
+++ b/index.html
@@ -479,11 +479,10 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 50px;">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MET-REPORT - 
-                <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> 
+              <h3 class="project-wrapper__text-title">SPACEious -  
                 <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
               </h3>
               <div>
