--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  Metrological Report or 'MET-REPORT' is an application that will help you to get the weather conditions of a partiular place in the world.
+                  Dive deep into the space with this app.
                 </p>
               </div>
               <div>
@@ -500,7 +500,7 @@
                   <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://romantic-tereshkova-3883dc.netlify.app/">
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://sharp-sammet-bfa9e5.netlify.app/">
                 See Live
               </a>
             </div>
@@ -514,7 +514,7 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/projects/metreport.png" />
+                  <img class="img-fluid" src="./img/projects/Nasa.png" />
                 </div>
             </a>
           </div>
