[Shubham] Editing the CSS for spacious

--- a/index.html
+++ b/index.html
@@ -488,12 +488,17 @@
               <div>
                 <p class="mb-4">
                   Dive deep into the space with this app.
+                  <div class="progress progress-striped">
+                    <div class="progress-bar" style="color: black; font-size: large; font-weight: 700;">IN PROGRESS
+                    </div>                       
+                  </div> 
                 </p>
               </div>
               <div>
               <div>
                 <a>
                   <i class="fab fa-github" style="font-size: 2rem;"></i>
+                  <i class="fab fa-jira" style="font-size: 2rem;"></i>
                   <i class="fab fa-react" style="font-size: 2rem;"></i>
                   <i class="fab fa-js" style="font-size: 2rem;"></i>
                   <i class="fab fa-html5" style="font-size: 2rem;"></i>
