[Shubham] Correcting VS code

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/VS.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Virtual Studio</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Visual Studio Code</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
