[Shubham] Adding API icon

--- a/index.html
+++ b/index.html
@@ -428,6 +428,9 @@
                   <i class="fab fa-js" style="font-size: 2rem;"></i>
                   <i class="fab fa-html5" style="font-size: 2rem;"></i>
                   <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                  <img src="./img/tech/api.png" style="margin-left: 4px;
+                  margin-top: -15px;
+                  height: 35px;"/>
                 </a>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero" href="https://romantic-tereshkova-3883dc.netlify.app/">
@@ -503,6 +506,9 @@
                   <i class="fab fa-js" style="font-size: 2rem;"></i>
                   <i class="fab fa-html5" style="font-size: 2rem;"></i>
                   <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                  <img src="./img/tech/api.png" style="margin-left: 4px;
+                  margin-top: -15px;
+                  height: 35px;"/>
                 </a>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero" href="https://sharp-sammet-bfa9e5.netlify.app/">
