--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       <li><a href="#skills" class="js-scroll-trigger">Skills</a></li>
       <li><a href="#projects" class="js-scroll-trigger">Projects</a></li>
       <li><a href="#contact" class="js-scroll-trigger">Contact Me</a></li>
+      <li><a href="#contact" class="js-scroll-trigger">My Blogs</a></li>
     </ul>
   </div>
 
