--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Graph QL</div>
           </a>
         </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/bootstrap.png" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Bootstrap</div>
+          </a>
+        </div>
       </div>
       <div class="content-section-heading text-center">
         <h2 class="mb-5" style="margin-top: 100px;">PROJECT MANAGEMENT SKILLS</h2>
