[Shubham] Removing in-progress bar from spaceious

--- a/index.html
+++ b/index.html
@@ -500,10 +500,10 @@
               <div>
                 <p class="mb-4">
                   Dive deep into the space with this app. Have a look at the astronomy picture of the day and get to know about it.
-                  <div class="progress progress-striped">
+                  <!-- <div class="progress progress-striped">
                     <div class="progress-bar" style="color: black; font-size: large; font-weight: 700;">IN PROGRESS
                     </div>                       
-                  </div> 
+                  </div>  -->
                 </p>
               </div>
               <div>
