[Shubham] Editing footer

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ height: 100%;">
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Made with &hearts; by Shubham</p>
+      <p class="text-muted small mb-0">Made by Shubham &copy;</p>
     </div>
   </footer>
 
