--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
-              <div data-tilt class="thumbnail rounded">
+              <div data-tilt class="thumbnail rounded" style="padding: 50px 0px 50px 0px;">
                 <img class="img-fluid" src="./img/tech/sonarqube-logo.png" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">SonarQube</div>
