--- a/index.html
+++ b/index.html
@@ -310,6 +310,15 @@
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/postman.png" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Postman</div>
+          </a>
+        </div>
+        
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
               <div data-tilt class="thumbnail rounded" style="padding: 50px 0px 50px 0px;">
                 <img class="img-fluid" src="./img/tech/sonarqube-logo.png" />
               </div>
