[Shubham] Adding antd logo

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/styling.png" />
+                <img class="img-fluid" src="./img/tech/antd.svg" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">UI styling</div>
           </a>
