[Shubham] Adding antd text

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/antd.svg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">UI styling</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Ant Design</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
