[Shubham] Adding Material-UI text

--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
           </a>
         </div>
       </div>
-      <div class="row" style="margin-top: 30px;">
-        
+      <div class="row" style="margin-top: 30px;">        
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
@@ -316,13 +315,22 @@
               <div style="text-align: center; margin-top: 10px; color: black;">Postman</div>
           </a>
         </div>
-        
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded" style="padding: 50px 0px 50px 0px;">
                 <img class="img-fluid" src="./img/tech/sonarqube-logo.png" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">SonarQube</div>
+          </a>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 30px;">        
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/m-ui.png" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Material-UI</div>
           </a>
         </div>
       </div>
