[Shubham] Adding firebase scripts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="shortcut icon" type="image/png" href="./img/title.png" />
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="./mail.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
   <title>Shubham | Developer</title>
 
   <!-- Bootstrap Core CSS -->
