[Shubham] Adding firebase configuration

--- a/index.html
+++ b/index.html
@@ -711,6 +711,20 @@ height: 100%;">
   </script> -->
   <!--End of Tawk.to Script -->
 
+  <script type="application/javascript">
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyBUzsMFQZWEIlbJPhlMNPoyl3fDsjtFKw4",
+      authDomain: "portfolio-live-f4715.firebaseapp.com",
+      projectId: "portfolio-live-f4715",
+      storageBucket: "portfolio-live-f4715.appspot.com",
+      messagingSenderId: "1183687844",
+      appId: "1:1183687844:web:fac4134bc0d435396ab231"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
 </body>
 
 </html>
