[Shubham] Adding script for api ipify

--- a/index.html
+++ b/index.html
@@ -725,6 +725,8 @@ height: 100%;">
     firebase.initializeApp(firebaseConfig);
   </script>
 
+  <script type="application/javascript" src="http://api.ipify.org?format=jsonp&callback=get_likers_ip"></script>
+
 </body>
 
 </html>
