[Shubham] Adding like button css

--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@ height: 100%;">
         <div class="heart-btn">
           <div class="content">
             <span class="heart"></span>
-            <span class="text" id="btn" style="margin-left: 45px;">Liked it</span>
-            <span class="text" id="likes">13</span>
+            <span class="text" id="btn" style="margin-left: 45px;">Liked it |</span>
+            <span class="text" id="likes" style="margin-left: 5px;">13</span>
             <span class="numb"></span>
           </div>
         </div>
