[Shubham] Adding like button css

--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@ height: 100%;">
 				<textarea name="message"  id="message" placeholder="Message" class="field" required></textarea>
         <button class="btn">Send</button>
         <div class="heart-btn">
-          <div class="content">
+          <div class="content" id="btn">
             <span class="heart"></span>
-            <span class="text" id="btn" style="margin-left: 35px;">Liked it </span>
+            <span class="text" style="margin-left: 35px;">Liked it </span>
             <span class="text" id="likes" style="margin-left: 15px;">13</span>
             <span class="numb"></span>
           </div>
