[Shubham] removing like button text

--- a/index.html
+++ b/index.html
@@ -617,9 +617,9 @@ height: 100%;">
         <button class="btn">Send</button>
         <div class="heart-btn">
           <div class="content" id="btn">
-            <span class="heart"></span>
-            <span class="text" style="margin-left: 35px;">Liked it </span>
-            <span class="text" id="likes" style="margin-left: 15px;">13</span>
+            <span class="heart" style="margin-left: 10px;"></span>
+            <span class="text" style="margin-left: 0px;"></span>
+            <span class="text" id="likes" style="margin-left: 35px;">13</span>
             <span class="numb"></span>
           </div>
         </div>
