[Shubham] Editing social buttons

--- a/index.html
+++ b/index.html
@@ -650,13 +650,13 @@ height: 100%;">
           </a>
         </li> -->
         <li class="list-inline-item" style="margin-right: 24px;">
-          <a class="social-link rounded-circle text-white" style="background-color: #343a40;" href="https://www.linkedin.com/in/shubham-sinha-09b1ab127/">
-            <i class="icon-social-linkedin"></i>
+          <a class="social-link rounded-circle text-white" style="background-color: white;" href="https://www.linkedin.com/in/shubham-sinha-09b1ab127/">
+            <i class="icon-social-linkedin" style="color:#378de2 ;"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" style="background-color: #343a40;" href="https://github.com/ssinha8752">
-            <i class="icon-social-github"></i>
+          <a class="social-link rounded-circle text-white" style="background-color: white;" href="https://github.com/ssinha8752">
+            <i class="icon-social-github" style="color: black;"></i>
           </a>
         </li>
       </ul>
