--- a/index.html
+++ b/index.html
@@ -567,6 +567,36 @@
             </a>
           </div>
         </div>
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-lg-8 col-sm-12">
+            <a class="portfolio-item" href="#!">
+                <div data-tilt class="thumbnail rounded">
+                  <img class="img-fluid" src="./img/projects/music.png" />
+                </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">MUSIC APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <div>
+                <p class="mb-4">
+                  Music application to be more concentrated for work. The library is loaded with 14 songs which the user can switch at any moment.
+                </p>
+              </div>
+              <div>
+                <a>
+                  <i class="fab fa-github" style="font-size: 2rem;"></i>
+                  <i class="fab fa-js" style="font-size: 2rem;"></i>
+                  <i class="fab fa-html5" style="font-size: 2rem;"></i>
+                  <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                </a>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://nostalgic-galileo-141565.netlify.app/">
+                See Live
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
