--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MUSIC APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <h3 class="project-wrapper__text-title">SCREEN BOX - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
               <div>
                 <p class="mb-4">
                   Music application to be more concentrated for work. The library is loaded with 14 songs which the user can switch at any moment.
