[Shubham] Adding screenbox project in projects description

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/projects/music.png" />
+                  <img class="img-fluid" src="./img/projects/ScreenBox.png" />
                 </div>
             </a>
           </div>
