--- a/index.html
+++ b/index.html
@@ -493,27 +493,32 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/projects/music.png" />
+                  <img class="img-fluid" src="./img/projects/Cinemate.png" />
                 </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MUSIC APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <h3 class="project-wrapper__text-title">CINEMA APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
               <div>
                 <p class="mb-4">
-                  Music application to be more concentrated for work. The library is loaded with 14 songs which the user can switch at any moment.
+                  Application consuming an API to fetch the details of different movies.
                 </p>
               </div>
               <div>
-                <a>
-                  <i class="fab fa-github" style="font-size: 2rem;"></i>
-                  <i class="fab fa-js" style="font-size: 2rem;"></i>
-                  <i class="fab fa-html5" style="font-size: 2rem;"></i>
-                  <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
-                </a>
+                  <a>
+                    <i class="fab fa-github" style="font-size: 2rem;"></i>
+                    <i class="fab fa-jira" style="font-size: 2rem;"></i>
+                    <i class="fab fa-react" style="font-size: 2rem;"></i>
+                    <i class="fab fa-js" style="font-size: 2rem;"></i>
+                    <i class="fab fa-html5" style="font-size: 2rem;"></i>
+                    <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                    <img src="./img/tech/api.png" style="margin-left: 4px;
+                    margin-top: -15px;
+                    height: 35px;"/>
+                  </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://nostalgic-galileo-141565.netlify.app/">
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://shubham-cinemate.netlify.app/">
                 See Live
               </a>
             </div>
@@ -522,12 +527,12 @@
         <div class="row" style="margin-top: 50px;">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">SPACEious -  
+              <h3 class="project-wrapper__text-title">Soundsavvy -  
                 <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
               </h3>
               <div>
                 <p class="mb-4">
-                  Dive deep into the space with this app. Have a look at the astronomy picture of the day and get to know about it.
+                  Dive deep into the space of headphones with this ecommerce app. Have a look at the design and functionalities of an e-commerce app and get to know about it.
                   <!-- <div class="progress progress-striped">
                     <div class="progress-bar" style="color: black; font-size: large; font-weight: 700;">IN PROGRESS
                     </div>                       
@@ -543,12 +548,9 @@
                   <i class="fab fa-js" style="font-size: 2rem;"></i>
                   <i class="fab fa-html5" style="font-size: 2rem;"></i>
                   <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
-                  <img src="./img/tech/api.png" style="margin-left: 4px;
-                  margin-top: -15px;
-                  height: 35px;"/>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://sharp-sammet-bfa9e5.netlify.app/">
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://soundsavvy.netlify.app/">
                 See Live
               </a>
             </div>
@@ -562,7 +564,7 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/projects/Nasa.png" />
+                  <img class="img-fluid" src="./img/projects/Soundsavvy.png" />
                 </div>
             </a>
           </div>
