[Shubham][5-May] Adding new project

--- a/index.html
+++ b/index.html
@@ -448,13 +448,13 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">MET-REPORT - 
+              <h3 class="project-wrapper__text-title">Sportify
                 <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> 
                 <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
               </h3>
               <div>
                 <p class="mb-4">
-                  Metrological Report or 'MET-REPORT' is an application that will help you to get the weather conditions of a partiular place in the world.
+                  E-commerce web application selling online courses with frontend deployed on netlify and backend has been deployed on render with APIs for the application
                 </p>
               </div>
               <div>
@@ -470,7 +470,7 @@
                   height: 35px;"/>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://romantic-tereshkova-3883dc.netlify.app/">
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://sportify-ss.netlify.app/">
                 See Live
               </a>
             </div>
