--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="overlay"></div>
     <div class="text">
       <h2>Hey there!!</h2> 
-      <h3>I am Shubham </h3>
+      <h3>I am Shubham Sinha</h3>
       <!-- <div style="display: flex;"> -->
       <div>
       <!-- <p class="typing">His</p> -->
